...
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/street_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/street_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/activity_horizontal_margin">
...
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:hint="Street Address"/>

            <ImageButton
                android:id="@+id/street_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_my_location"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/street_edit"
                android:layout_marginStart="@dimen/place_autocomplete_button_padding"
...
